--- a/README.org
+++ b/README.org
@@ -2,9 +2,9 @@
 
 
 
-|---------+-------------------------------------------|
-| source  | git:git://git.savannah.nongnu.org/femlisp.git   |
-| commit  |   |
-| systems | femlisp |
-|---------+-------------------------------------------|
+9084944---------+-------------------------------------------|
+9084944 source  | git:git://git.savannah.nongnu.org/femlisp.git   |
+9084944 commit  |   |
+9084944 systems | femlisp |
+9084944---------+-------------------------------------------|
 
